Revert "Bump testR8Lib unified test runner to JDK 25"
This reverts commit c1b4bd33b43f3cf0a6f8fc6eeccae3ba6aeba5f6.

Reason for revert: broke bots

Change-Id: Ic496c804b2966b8461029a2bf96524c3cc99c1fd